# MPC_BIP32_Hardened_Child_Key

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: HMAC512Config.cmake.in
docs/: User Manual.md  用户手册.md
src/HMAC512/: CMakeLists.txt
src/HMAC512/B2A/: B2Aparty.cpp  B2Aparty.h  B2Asharing.cpp  B2Asharing.h
src/HMAC512/BigNum/BigNum/: BigNum.c  BigNum.h  BigNum_mod.c  BigNum_mont.c  BigNum_test.c
src/HMAC512/BigNum/Common/: Common.c  Common.h  Common_test.c  RNG.c
src/HMAC512/hmac512_circuit/: hmac512_circuit.cpp  hmac512_circuit.h
src/test/: CMakeLists.txt  hmac512_test.cpp
